Salesforce/main/default/main/default/objects/Cooperante__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cooperantes</relationshipLabel>
    <relationshipName>Cooperantes</relationshipName>
    <type>Lookup</type>
</CustomField>