Salesforce/main/default/main/default/objects/Cooperante__c/fields/CuentaCoop__c.field-meta.xml
<CustomField>
    <fullName>CuentaCoop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CuentaCoop</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cooperantes (CuentaCoop)</relationshipLabel>
    <relationshipName>Cooperante</relationshipName>
    <type>Lookup</type>
</CustomField>