Salesforce/main/default/main/default/objects/Cooperante__c/fields/Renasem__c.field-meta.xml
<CustomField>
    <fullName>Renasem__c</fullName>
    <label>Renasem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>